# avg_thrpt

./: AveragerTest.h  CMakeLists.txt  CMakeLists.txt.in  README.md  averager.cpp  averager.h  main.cpp
